// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessageContent > ARRAY > should write an array of content correctly 1`] = `
"[
    StringChatMessageContentRequest(value="First message"),
    FunctionCallChatMessageContentRequest(
        value=FunctionCallChatMessageContentValueRequest(
            name="get_weather", arguments={"location": "Seattle"}
        )
    ),
]
"
`;

exports[`ChatMessageContent > FUNCTION_CALL > should write a function call content with id correctly 1`] = `
"FunctionCallChatMessageContentRequest(
    value=FunctionCallChatMessageContentValueRequest(
        id="123",
        name="get_weather",
        arguments={"location": "New York", "unit": "celsius"},
    )
)
"
`;

exports[`ChatMessageContent > FUNCTION_CALL > should write a function call content without id correctly 1`] = `
"FunctionCallChatMessageContentRequest(
    value=FunctionCallChatMessageContentValueRequest(
        name="get_weather", arguments={"location": "New York", "unit": "celsius"}
    )
)
"
`;

exports[`ChatMessageContent > IMAGE > should write an image content correctly 1`] = `
"ImageChatMessageContentRequest(
    src="https://example.com/image.png", metadata={"key": "value"}
)
"
`;

exports[`ChatMessageContent > STRING > should write a string content correctly 1`] = `"StringChatMessageContentRequest(value="Hello, AI!")"`;
